--- a/style.css
+++ b/style.css
@@ -6,27 +6,11 @@ body {
 
 /* Mobile */
 @media screen and (max-width: 600px) {
-  body {
-    font-size: 14px;
-  }
-  .header {
-    font-size: 18px;
-  }
-  #container {
-    width: 90%;
-    padding: 10px;
-  }
   video,
   canvas {
     width: 100%;
     height: auto;
-  }
-  button {
-    padding: 8px 16px;
-    font-size: 14px;
-  }
-  #stickers {
-    display: none; /* Sembunyikan stiker di mobile */
+    aspect-ratio: 4 / 3; /* Pastikan aspek rasio tetap 4:3 */
   }
 }
 
