--- a/style.css
+++ b/style.css
@@ -5,12 +5,28 @@ body {
 }
 
 /* Mobile */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1025px) {
+  body {
+    font-size: 14px;
+  }
+  .header {
+    font-size: 18px;
+  }
+  #container {
+    width: 90%;
+    padding: 10px;
+  }
   video,
   canvas {
     width: 100%;
     height: auto;
-    aspect-ratio: 4 / 3; /* Pastikan aspek rasio tetap 4:3 */
+  }
+  button {
+    padding: 8px 16px;
+    font-size: 14px;
+  }
+  #stickers {
+    display: none; /* Sembunyikan stiker di mobile */
   }
 }
 
